--- a/main.html
+++ b/main.html
@@ -20,25 +20,15 @@
 					max2=max1;
 						max1=arr[i];
 					}
-					else if(arr[i]>second && arr[i] < first)
+					else if(arr[i]>max2 && arr[i] < max1)
 					{
-						second=arr[i];
+						max1=arr[i];
 					}
 				}
-			return second;
+			return max2;
 		}
 		
  
-		function Main() {
-			var n = prompt("Enter the number of elements");
-			var arr = [];
-			for (var i = 0; i < n; i++) {
-				arr[i] = prompt("Enter element " + (i+1));
-			}
-			alert(secondHighest(arr));
-		}
-		Main();
-
 		
 	</script>
 
